--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <ul ng-repeat="item in bought.list">
           <li>bought {{item.quantity}} {{item.item}}</li>
         </ul>
+        {{bought.message}}
       </div>
 
     </div>
